--- a/index.html
+++ b/index.html
@@ -440,11 +440,10 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        <label for="checkbox-agree" class="text-checkbox">Погоджуюся з розсилкою та приймаю <a href="#"
-                                class="text-checkbox">
-                                <span class="conditions-link">Умови договору</span></a>
-                        </label>
-                </div>
+                        Погоджуюся з розсилкою та приймаю <a href="#" class="text-checkbox">
+                            <span class="conditions-link">Умови договору</span></a>
+                    </label>
+                    </div>
                 <button type="submit" class="button-primary button-form">Відправити</button>
                 </form>
         </div>
